# wxwidgets-ffmpeg

./: CMakeLists.txt  README.md  vcpkg.json
include/: ffmpegapp.h  ffmpegframe.h
src/: ffmpegapp.cpp  ffmpegframe.cpp  main.cpp
